# TeleSpaceBackend

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  db.sqlite
api/: Cargo.toml
api/src/: lib.rs  pool.rs  responses.rs
api/src/handlers/: dir_handlers.rs  file_handler.rs  file_handlers.rs  mod.rs  task_handlers.rs  user_handlers.rs
api/src/jwtauth/: jwt.rs
api/src/utils/: lib.rs  mod.rs
entity/: Cargo.toml
entity/src/: chunks.rs  files.rs  lib.rs  mod.rs  notification_tokens.rs  prelude.rs  task_list.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240221_184457_users.rs  m20240221_185739_files.rs  m20240221_185740_files.rs  m20240221_232414_chunks.rs  m20240229_231056_task_list.rs  m20240303_231056_task_list.rs  m20240510_142918_notification_token.rs
service/: Cargo.toml
service/src/: lib.rs  task_queue.rs  worker.rs
src/: main.rs
src/splitting_utils/: file_merger.rs  file_splitter.rs  mod.rs
