workspace = { members = ["entity", ".", "migration", "api", "service"] }
[package]
name = "thesplitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
    "with-time",
    "with-json",
] }
entity = { path = "entity" }
migration = { path = "migration" }
api = {path = "api"}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
rust_file_splitting_utils = { git = "https://github.com/FireWtap/RustFileSplitter", branch = "main" }
cargo-watch = "8.5.2"
